🍤 Add Update Function

--- a/config.json
+++ b/config.json
@@ -1,5 +1,9 @@
 {
     "WIFI_SSID": "Wifi_example_ssid",
     "WIFI_PASSWORD": "Wifi_example_password",
-    "apikey": "esp32Camera"
+    "apikey": "esp32Camera",
+    "version": "1.0.1",
+    "versionNum": 101,
+    "updateTime": 0,
+    "updateUrl": ""
 }
