Update config.json add hostname

--- a/src/config.json
+++ b/src/config.json
@@ -1,6 +1,7 @@
 {
     "WIFI_SSID": "Wifi_example_ssid",
     "WIFI_PASSWORD": "Wifi_example_password",
+    "hostname":"espcamera",
     "apikey": "esp32Camera",
     "version": "1.0.1",
     "versionNum": 101,
